test/corpus/positive.txt
====================
001
====================
hello
--------------------

(source_file
     (markup
         (text)))


====================
002
====================
hello  world
--------------------

(source_file
     (markup
         (text)
         (space)
         (text)))


====================
003
====================
hello *world*
--------------------

(source_file
     (markup
         (text)
         (space)
         (strong
             (star)
             (markup
                 (text))
             (star))))


====================
004
====================
hello*world
--------------------

(source_file
     (markup
         (text)
         (text)))


====================
005
====================
world 
--------------------

(source_file
     (markup
         (text)
         (space)))


====================
006
====================
_*hello* *_world_*_
--------------------

(source_file
     (markup
         (emph
             (underscore)
             (markup
                 (strong
                     (star)
                     (markup
                         (text))
                     (star))
                 (space)
                 (strong
                     (star)
                     (markup
                         (emph
                             (underscore)
                             (markup
                                 (text))
                             (underscore)))
                     (star)))
             (underscore))))


====================
007
====================
#i
--------------------

(source_file
     (markup
         (hash)
         (ident)))


====================
008
====================
a b#a b
--------------------

(source_file
     (markup
         (text)
         (hash)
         (ident)
         (space)
         (text)))


====================
009
====================
#2
--------------------

(source_file
     (markup
         (hash)
         (int)))


====================
010
====================
`2 + 3 x `
--------------------

(source_file
     (markup
         (raw
             (raw_delim)
             (raw_blob)
             (raw_delim))))


====================
011
====================
```2 + 3 x```
--------------------

(source_file
     (markup
         (raw
             (raw_delim)
             (raw_blob)
             (raw_delim))))


====================
012
====================
``hoho``
--------------------

(source_file
     (markup
         (raw
             (raw_delim)
             (raw_blob)
             (raw_delim))
         (text)
         (raw
             (raw_delim)
             (raw_blob)
             (raw_delim))))


====================
013
====================
```
	hello
	world
```
--------------------

(source_file
     (markup
         (raw
             (raw_delim)
             (raw_blob)
             (raw_delim))))


====================
014
====================
```   
	hello
	world
```
--------------------

(source_file
     (markup
         (raw
             (raw_delim)
             (raw_blob)
             (raw_delim))))


====================
015
====================
```typst
	hello
	world
```
--------------------

(source_file
     (markup
         (raw
             (raw_delim)
             (raw_lang)
             (raw_blob)
             (raw_delim))))


====================
016
====================
```  typst
	hello
	world
```
--------------------

(source_file
     (markup
         (raw
             (raw_delim)
             (raw_blob)
             (raw_delim))))


